--- a/style.css
+++ b/style.css
@@ -4,14 +4,30 @@
     box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'troglodytenfregular';
+  src: url('fonts/trogn___-webfont.woff2') format('woff2'),
+       url('fonts/trogn___-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+body {
+  background-image: url("bricks.jpg");
+}
+
 #topBox {
   opacity: 1;
   transition: all 1000ms;
 }
 
 #menuBox {
+  font-family: 'troglodytenfregular';
+  font: white;
+
     text-align: center;
-  font-size: xx-large;
+  font-size: 4em;
   margin: auto;
   min-width: 1000px
 }
@@ -19,6 +35,7 @@
 #spacer {
     width:200px;
     height:150px;
+    margin:auto;
 }
 
 #menuInterface {
@@ -33,9 +50,13 @@
 }
 
 #instructions {
+  background: rgb(255, 255, 255);
+  border:5px solid black;
   padding: 20px 20px;
-    margin: auto;
-    min-width: 1000px;
+  opacity: 0.6;
+    margin: 5px auto;
+    min-width: 500px;
+    max-width: 900px;
     text-align: center;
 }
 
@@ -205,4 +226,20 @@ text-orientation: mixed;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
+}
+
+footer {
+  flex-wrap: nowrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1em;
+
+}
+
+#thanks {
+  margin:auto;
+  min-width: 1000px;
+  padding: 5px;
+  text-align: center;
 }
